--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,70 @@
 #og-show {
   display: none;
 }
+
+.result {
+  background-color: rgb(219, 244, 236);
+  width: 75%;
+  margin-top: 10%;
+  text-align: center;
+  font-size: 30px;
+  text-shadow: 2px 2px white;
+}
+
+.select {
+  display: block;
+  margin: auto;
+  width: auto;
+  padding-left: 40%;
+  background-color: rgb(240, 226, 237);
+} 
+
+.select-result {
+  background-color: white;
+  width: 75%;
+  margin-top: 10%;
+  text-align: center;
+  font-size: 30px;
+  text-shadow: 2px 2px rgb(189, 155, 177);
+}
+
+#operator {
+  background-color: black;
+  color: white;
+  width: 50px;
+}
+
+.btn-danger {
+  background-color: rgb(126, 63, 99);
+  border: 1px solid black;
+  width: auto;
+}
+
+.btn-danger:hover {
+  background-color: rgb(0, 0, 0);
+  border: 1px solid black;
+  color: white;
+  width: auto;
+}
+
+.btn-danger:active {
+  background-color: rgb(0, 0, 0);
+  border: 1px solid black;
+  color: white;
+  width: auto;
+}
+
+.btn-danger:focus, .btn-danger.focus {
+  color: #fff;
+  background-color: #000000;
+  border-color: #000000;
+  box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+}
+
+.checked {
+  display: block;
+  margin: auto;
+  width: auto;
+  padding-left: 40%;
+  background-color: rgb(249, 249, 209);
+} 
