--- a/css/styles.css
+++ b/css/styles.css
@@ -71,10 +71,47 @@
   box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
 }
 
+.btn-warning {
+  background-color: rgb(147, 125, 61);
+  border: 1px solid black;
+  color: white;
+  width: auto;
+}
+
+.btn-warning:hover {
+  background-color: rgb(0, 0, 0);
+  border: 1px solid black;
+  color: white;
+  width: auto;
+}
+
+.btn-warning:active {
+  background-color: rgb(0, 0, 0);
+  border: 1px solid black;
+  color: white;
+  width: auto;
+}
+
+.btn-warning:focus, .btn-warning.focus {
+  color: #fff;
+  background-color: #000000;
+  border-color: #000000;
+  box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+}
 .checked {
   display: block;
   margin: auto;
   width: auto;
   padding-left: 40%;
   background-color: rgb(249, 249, 209);
+  margin-bottom: 100px;
 } 
+
+.radio-result {
+  background-color: white;
+  width: 75%;
+  margin-top: 10%;
+  text-align: center;
+  font-size: 30px;
+  text-shadow: 2px 2px rgb(149, 150, 122);
+}
